--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,67 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style/styles.css">
     <title>Каталог товаров</title>
-  </head>
-  <body>
-    <header>
-      <h1>Заголовок сайта</h1>
-    </header>
+</head>
+<body>
+    <div class="page-container">
+        <div class="header">Хэдер</div>
 
-    <nav>
-      <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="./news.html">Новости</a></li>
-        <li><a href="./goods.html">Товары</a></li>
-        <li><a href="./contacts.html">Контакты</a></li>
-      </ul>
-    </nav>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="../index.html" class="nav-link">Главная</a></li>
+                <li class="nav-item"><a href="./news.html" class="nav-link">Новости</a></li>
+                <li class="nav-item"><a href="./goods.html" class="nav-link">Товары</a></li>
+                <li class="nav-item"><a href="./contacts.html" class="nav-link">Контакты</a></li>
+            </ul>
+        </nav>
 
-    <main>
-      <h2>Каталог товаров</h2>
+        <main class="content">
+            <h2 class="section-title">Каталог товаров</h2>
 
-      <div class="products-grid">
-        <div class="product-card">
-          <img
-            src="../images/product1.jpg"
-            alt="Название товара 1"
-            width="300"
-            height="200"
-          />
-          <h3>Название товара 1</h3>
-          <p class="price">1000 руб.</p>
-        </div>
+            <div class="products-grid">
+                <div class="product-card">
+                    <img src="../images/product1.jpg" alt="Название товара 1" class="product-image">
+                    <h3 class="product-title">Название товара 1</h3>
+                    <p class="product-price">1000 руб.</p>
+                </div>
 
-        <div class="product-card">
-          <img
-            src="../images/product2.jpg"
-            alt="Название товара 2"
-            width="300"
-            height="200"
-          />
-          <h3>Название товара 2</h3>
-          <p class="price">1500 руб.</p>
-        </div>
+                <div class="product-card">
+                    <img src="../images/product2.jpg" alt="Название товара 2" class="product-image">
+                    <h3 class="product-title">Название товара 2</h3>
+                    <p class="product-price">1500 руб.</p>
+                </div>
 
-        <div class="product-card">
-          <img
-            src="../images/product4.jpg"
-            alt="Название товара 3"
-            width="300"
-            height="200"
-          />
-          <h3>Название товара 3</h3>
-          <p class="price">2000 руб.</p>
-        </div>
+                <div class="product-card">
+                    <img src="../images/product4.jpg" alt="Название товара 3" class="product-image">
+                    <h3 class="product-title">Название товара 3</h3>
+                    <p class="product-price">2000 руб.</p>
+                </div>
+            </div>
+        </main>
 
-
-      </div>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 Наш сайт. Все права защищены.</p>
-    </footer>
-  </body>
+        <footer class="footer">
+            <p>&copy; 2024 Наш сайт. Все права защищены.</p>
+        </footer>
+    </div>
+</body>
 </html>
