--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1 class="profile-title">Информация об авторе</h1>
           <img
             class="profile-photo"
-            src="images/photo.png"
+            src="images/photo.jpg"
             alt="Фото
 автора"
           />
