--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             alt="Фото
 автора"
           />
-          <h2 class="profile-name">Иванов Иван Иванович</h2>
-          <p class="profile-group">ЭФБО-00-00</p>
+          <h2 class="profile-name">Ланец Артем николаевич</h2>
+          <p class="profile-group">ЭФБО-02-24</p>
         </div>
 
         <div class="about-me">
