--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
 
         <div class="about-me">
           <p>
-            Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано
-            ударила в голову. В четыре активно ругался. Потом школа, форма,
-            драки, клей. Так я становился сильней. Воровал деньги в раздевалке.
+            Учусь в РТУ МИРЭА, на фуллстек разработчика и мечтаю попасть на стажировку
           </p>
         </div>
 
         <div class="skills-container">
-          <div class="skill-tag">Навык 1</div>
-          <div class="skill-tag">Навык 2</div>
-          <div class="skill-tag">Навык 3</div>
-          <div class="skill-tag">Навык 4</div>
+          <div class="skill-tag">Красивый</div>
+          <div class="skill-tag">Умный</div>
+          <div class="skill-tag">Плейбой</div>
+          <div class="skill-tag">Филантроп</div>
         </div>
 
         <div class="experience-section">
@@ -61,18 +59,18 @@
           <div class="experience-card">
             <h3 class="experience-title">Опыт 1</h3>
             <p class="experience-desc">
-              Работал фантазёром. Сочинял и праздновал.
+              пет-проекты
             </p>
           </div>
           <div class="experience-card">
             <h3 class="experience-title">Опыт 2</h3>
             <p class="experience-desc">
-              Работал воровством. Воровал и продавал.
+              Решал тестовые задания
             </p>
           </div>
           <div class="experience-card">
             <h3 class="experience-title">Опыт 3</h3>
-            <p class="experience-desc">Работал рэпером. Читал и пел.</p>
+            <p class="experience-desc">учусь в Т-Академии</p>
           </div>
         </div>
       </div>
