--- a/pages/goods.html
+++ b/pages/goods.html
@@ -25,19 +25,19 @@
             <div class="products-grid">
                 <div class="product-card">
                     <img src="../images/product1.jpg" alt="Название товара 1" class="product-image">
-                    <h3 class="product-title">Название товара 1</h3>
+                    <h3 class="product-title">Полка с товарами</h3>
                     <p class="product-price">1000 руб.</p>
                 </div>
 
                 <div class="product-card">
                     <img src="../images/product2.jpg" alt="Название товара 2" class="product-image">
-                    <h3 class="product-title">Название товара 2</h3>
+                    <h3 class="product-title">Дверь со старой ручкой</h3>
                     <p class="product-price">1500 руб.</p>
                 </div>
 
                 <div class="product-card">
                     <img src="../images/product4.jpg" alt="Название товара 3" class="product-image">
-                    <h3 class="product-title">Название товара 3</h3>
+                    <h3 class="product-title">Картина мироздания</h3>
                     <p class="product-price">2000 руб.</p>
                 </div>
             </div>
