--- a/index.html
+++ b/index.html
@@ -43,34 +43,51 @@
 
         <div class="about-me">
           <p>
-            Учусь в РТУ МИРЭА, на фуллстек разработчика и мечтаю попасть на стажировку
+            Учусь в РТУ МИРЭА, на фуллстек разработчика и мечтаю попасть на
+            стажировку
           </p>
         </div>
-
+        <h2 class="section-title">Навыки</h2>
         <div class="skills-container">
-          <div class="skill-tag">Красивый</div>
-          <div class="skill-tag">Умный</div>
-          <div class="skill-tag">Плейбой</div>
-          <div class="skill-tag">Филантроп</div>
+          <div class="skill-tag">JavaScript/TypeScript</div>
+          <div class="skill-tag">React</div>
+          <div class="skill-tag">Webpack/Vite/CRA</div>
+          <div class="skill-tag">MVP/MVC</div>
         </div>
 
         <div class="experience-section">
-          <h2 class="section-title">Мой опыт работы</h2>
+          <h2 class="section-title">Мои пет-проекты</h2>
           <div class="experience-card">
-            <h3 class="experience-title">Опыт 1</h3>
+            <h3 class="experience-title">VK-contest-movie-app</h3>
             <p class="experience-desc">
-              пет-проекты
+              Веб-приложение для просмотра информации о
+              фильмах(VK-contest-movie-app на гитхабе). В этом проекте я
+              использовал: React/Ts, стейт менеджер MobX, REST API(Axios),
+              реализовал: поиск по названию, фильтрация по жанрам и годам,
+              пагинация, а также добавление в избранное (с сохранением в
+              localStorage)
             </p>
           </div>
           <div class="experience-card">
-            <h3 class="experience-title">Опыт 2</h3>
+            <h3 class="experience-title">web-larek-frontend</h3>
             <p class="experience-desc">
-              Решал тестовые задания
+              Веб-Ларек(web-larek-frontend на гитхабе). Одностраничное
+              приложение (SPA) – интернет-магазин товаров. Проект реализован на
+              чистой архитектуре и собственная реализации паттернов без
+              использования внешних фреймворков. Реализован полный цикл от
+              выбора товара до оформления и валидации заказа.
             </p>
           </div>
           <div class="experience-card">
-            <h3 class="experience-title">Опыт 3</h3>
-            <p class="experience-desc">учусь в Т-Академии</p>
+            <h3 class="experience-title">Stellar-burgers</h3>
+            <p class="experience-desc">
+              Одностраничное приложение (SPA) с авторизацией, динамическим
+              обновлением данных через WebSocket и полным циклом взаимодействия:
+              от выбора ингредиентов до отслеживания истории заказов. В проекте
+              я использовал следующие технологии: React/Ts, стейт менеджер Redux
+              (redux-toolkit), React-router, JWT-tokens с сохранением в cokkie и
+              localStorage.
+            </p>
           </div>
         </div>
       </div>
