--- a/pages/goods.html
+++ b/pages/goods.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header">Хэдер</div>
+        <header class="header">
+            <h1>Каталог товаров</h1>
+        </header>
 
         <nav class="nav">
             <ul class="nav-list">
@@ -22,25 +24,27 @@
         <main class="content">
             <h2 class="section-title">Каталог товаров</h2>
 
-            <div class="products-grid">
-                <div class="product-card">
-                    <img src="../images/product1.jpg" alt="Название товара 1" class="product-image">
-                    <h3 class="product-title">Полка с товарами</h3>
+            <section class="products-grid" aria-labelledby="products-title">
+                <h3 id="products-title" class="visually-hidden">Список товаров</h3>
+                
+                <article class="product-card">
+                    <img src="../images/product1.jpg" alt="Полка с товарами" class="product-image">
+                    <h4 class="product-title">Полка с товарами</h4>
                     <p class="product-price">1000 руб.</p>
-                </div>
+                </article>
 
-                <div class="product-card">
-                    <img src="../images/product2.jpg" alt="Название товара 2" class="product-image">
-                    <h3 class="product-title">Дверь со старой ручкой</h3>
+                <article class="product-card">
+                    <img src="../images/product2.jpg" alt="Дверь со старой ручкой" class="product-image">
+                    <h4 class="product-title">Дверь со старой ручкой</h4>
                     <p class="product-price">1500 руб.</p>
-                </div>
+                </article>
 
-                <div class="product-card">
-                    <img src="../images/product4.jpg" alt="Название товара 3" class="product-image">
-                    <h3 class="product-title">Картина мироздания</h3>
+                <article class="product-card">
+                    <img src="../images/product4.jpg" alt="Картина мироздания" class="product-image">
+                    <h4 class="product-title">Картина мироздания</h4>
                     <p class="product-price">2000 руб.</p>
-                </div>
-            </div>
+                </article>
+            </section>
         </main>
 
         <footer class="footer">
