--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <section class="about-me" aria-labelledby="about-title">
           <h2 id="about-title" class="visually-hidden">Обо мне</h2>
           <p>
-            Учусь в РТУ МИРЭА, на фуллстек разработчика и мечтаю попасть на
-            стажировку
+            Учусь в РТУ МИРЭА на фуллстек разработчика и хочу попасть на
+            работу
           </p>
         </section>
         
@@ -100,7 +100,7 @@
       </main>
       
       <footer class="footer">
-        <p>&copy; 2024 Семестровая работа. Все права защищены.</p>
+        <p>&copy; 2025 Мой сайт. Все права защищены.</p>
       </footer>
     </div>
   </body>
