--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,49 +1,419 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css" />
     <title>Контакты</title>
-</head>
-<body>
+    <style>
+      dialog::backdrop {
+        background: rgba(0, 0, 0, 0.6);
+        animation: fadeIn 0.3s ease;
+      }
+
+      dialog {
+        border: none;
+        border-radius: 12px;
+        padding: 0;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        animation: slideIn 0.3s ease;
+        max-width: 500px;
+        width: 90vw;
+        max-height: 90vh;
+        overflow-y: auto;
+      }
+
+      .modal-header {
+        background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
+        color: white;
+        padding: 1.5rem;
+        border-radius: 12px 12px 0 0;
+        margin: 0;
+      }
+
+      .modal-header h2 {
+        margin: 0;
+        color: white;
+        font-size: 1.5rem;
+      }
+
+      .modal-content {
+        padding: 2rem;
+      }
+
+      .form-group {
+        margin-bottom: 1.5rem;
+      }
+
+      .form-group label {
+        display: block;
+        margin-bottom: 0.5rem;
+        font-weight: 600;
+        color: #2c3e50;
+      }
+
+      .form-group input,
+      .form-group select,
+      .form-group textarea {
+        width: 100%;
+        padding: 0.75rem;
+        border: 2px solid #e9ecef;
+        border-radius: 6px;
+        font-size: 1rem;
+        transition: border-color 0.3s ease;
+        box-sizing: border-box;
+      }
+
+      .form-group input:focus,
+      .form-group select:focus,
+      .form-group textarea:focus {
+        outline: none;
+        border-color: #667eea;
+      }
+
+      .form-group textarea {
+        min-height: 100px;
+        resize: vertical;
+      }
+
+      .modal-actions {
+        display: flex;
+        gap: 1rem;
+        justify-content: flex-end;
+        margin-top: 2rem;
+      }
+
+      .btn {
+        padding: 0.75rem 1.5rem;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: all 0.3s ease;
+        font-weight: 600;
+      }
+
+      .btn-primary {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+      }
+
+      .btn-primary:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+      }
+
+      .btn-secondary {
+        background: #f8f9fa;
+        color: #2c3e50;
+        border: 2px solid #e9ecef;
+      }
+
+      .btn-secondary:hover {
+        background: #e9ecef;
+      }
+
+      .required {
+        color: #e74c3c;
+      }
+
+      .contact-button {
+        background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+        color: white;
+        padding: 15px 30px;
+        border: none;
+        border-radius: 25px;
+        font-weight: 600;
+        font-size: 16px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        margin-top: 20px;
+        box-shadow: 0 4px 15px rgba(79, 172, 254, 0.3);
+      }
+
+      .contact-button:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 6px 20px rgba(79, 172, 254, 0.4);
+      }
+
+      .contact-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        margin: 30px 0;
+      }
+
+      .contact-item {
+        background: white;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+        text-align: center;
+      }
+
+      .contact-item h3 {
+        color: #2c3e50;
+        margin-bottom: 10px;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes slideIn {
+        from {
+          opacity: 0;
+          transform: translateY(-50px) scale(0.9);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      @media (max-width: 600px) {
+        dialog {
+          margin: 1rem;
+          width: calc(100vw - 2rem);
+        }
+
+        .modal-actions {
+          flex-direction: column;
+        }
+
+        .btn {
+          width: 100%;
+        }
+      }
+    </style>
+  </head>
+  <body>
     <div class="page-container">
-        <header class="header">
-            <h1>Контакты</h1>
-        </header>
+      <header class="header">
+        <h1>Контакты</h1>
+      </header>
 
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="../index.html" class="nav-link">Главная</a></li>
-                <li class="nav-item"><a href="./news.html" class="nav-link">Новости</a></li>
-                <li class="nav-item"><a href="./goods.html" class="nav-link">Товары</a></li>
-                <li class="nav-item"><a href="./contacts.html" class="nav-link">Контакты</a></li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a href="./news.html" class="nav-link">Новости</a>
+          </li>
+          <li class="nav-item">
+            <a href="./goods.html" class="nav-link">Товары</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacts.html" class="nav-link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
 
-        <main class="content">
-            <h2 class="section-title">Контакты</h2>
+      <main class="content">
+        <h2 class="section-title">Контакты</h2>
 
-            <section class="contact-info about-me" aria-labelledby="contact-title">
-                <h3 id="contact-title" class="visually-hidden">Контактная информация</h3>
-                <p>
-                    <strong>Электронная почта:</strong>
-                    <a href="mailto:info@example.com">info@example.com</a>
-                </p>
-                <p><strong>Адрес:</strong> г. Москва, ул. Примерная, д. 123</p>
-                <button class="skill-tag" onclick="callMe()">Позвоните мне</button>
-            </section>
-        </main>
+        <section class="contact-info about-me" aria-labelledby="contact-title">
+          <h3 id="contact-title" class="visually-hidden">
+            Контактная информация
+          </h3>
 
-        <footer class="footer">
-            <p>&copy; 2024 Наш сайт. Все права защищены.</p>
-        </footer>
+          <article class="contact-info">
+            <h3>Электронная почта</h3>
+            <p>
+              <strong>Адрес электронной почты:</strong>
+              <a href="mailto:astafev@mirea.ru">tank@world.ru</a>
+            </p>
+          </article>
+
+          <article class="contact-info">
+            <h3>Физический адрес</h3>
+            <p>
+              <strong>Адрес:</strong> г. Москва, ул. Пушкина, д. Колотушкина 13
+            </p>
+          </article>
+
+          <div class="contact-grid">
+            <div class="contact-item">
+              <h3>Телефон</h3>
+              <p>+7 (495) 123-45-67</p>
+            </div>
+            <div class="contact-item">
+              <h3>Время работы</h3>
+              <p>Пн-Пт: 9:00-18:00</p>
+            </div>
+            <div class="contact-item">
+              <h3>Социальные сети</h3>
+              <p>VK, Telegram, WhatsApp</p>
+            </div>
+          </div>
+
+          <button class="contact-button" onclick="contactModal.showModal()">
+            Связаться со мной
+          </button>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p>&copy; 2025 Мой сайт. Все права защищены.</p>
+      </footer>
     </div>
 
+    <dialog id="contactModal">
+      <div class="modal-header">
+        <h2>Форма обратной связи</h2>
+      </div>
+
+      <div class="modal-content">
+        <form id="feedbackForm" method="dialog">
+          <div class="form-group">
+            <label for="name">Имя <span class="required">*</span></label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="Введите ваше имя"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="phone">Телефон <span class="required">*</span></label>
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              required
+              placeholder="+7 (XXX) XXX-XX-XX"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="email"
+              >Электронная почта <span class="required">*</span></label
+            >
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="example@mail.ru"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="category"
+              >Категория обращения <span class="required">*</span></label
+            >
+            <select id="category" name="category" required>
+              <option value="">Выберите категорию</option>
+              <option value="technical">Техническая поддержка</option>
+              <option value="commercial">Коммерческое предложение</option>
+              <option value="cooperation">Сотрудничество</option>
+              <option value="complaint">Жалоба</option>
+              <option value="suggestion">Предложение</option>
+              <option value="other">Другое</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="message"
+              >Текст обращения <span class="required">*</span></label
+            >
+            <textarea
+              id="message"
+              name="message"
+              required
+              placeholder="Опишите вашу проблему или вопрос..."
+            ></textarea>
+          </div>
+
+          <div class="modal-actions">
+            <button onclick="clearForm()" class="btn btn-secondary">
+              Отмена
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="submitForm()"
+            >
+              Отправить
+            </button>
+          </div>
+        </form>
+      </div>
+    </dialog>
+
     <script>
-        function callMe() {
-            alert("Спасибо! Мы свяжемся с вами в ближайшее время.");
+      function clearForm() {
+        const form = document.getElementById("feedbackForm");
+        const formData = new FormData(form);
+        contactModal.close();
+
+        form.reset();
+      }
+      function submitForm() {
+        const form = document.getElementById("feedbackForm");
+        const formData = new FormData(form);
+
+        if (!form.checkValidity()) {
+          form.reportValidity();
+          return;
         }
+
+        const data = {
+          name: formData.get("name"),
+          phone: formData.get("phone"),
+          email: formData.get("email"),
+          category: formData.get("category"),
+          message: formData.get("message"),
+        };
+
+        alert(
+          "Спасибо! Ваше обращение отправлено. Мы свяжемся с вами в ближайшее время."
+        );
+
+        contactModal.close();
+
+        form.reset();
+      }
+
+      document
+        .getElementById("contactModal")
+        .addEventListener("click", function (event) {
+          if (event.target === this) {
+            this.close();
+          }
+        });
+
+      document
+        .getElementById("feedbackForm")
+        .addEventListener("keypress", function (event) {
+          if (event.key === "Enter" && event.target.type !== "textarea") {
+            event.preventDefault();
+          }
+        });
+
+      const style = document.createElement("style");
+      style.textContent = `
+            .visually-hidden {
+                position: absolute;
+                width: 1px;
+                height: 1px;
+                padding: 0;
+                margin: -1px;
+                overflow: hidden;
+                clip: rect(0, 0, 0, 0);
+                white-space: nowrap;
+                border: 0;
+            }
+        `;
+      document.head.appendChild(style);
     </script>
-</body>
+  </body>
 </html>
