--- a/pages/goods.html
+++ b/pages/goods.html
@@ -48,7 +48,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; 2024 Наш сайт. Все права защищены.</p>
+            <p>&copy; 2025 Мой сайт. Все права защищены.</p>
         </footer>
     </div>
 </body>
