--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,106 +1,192 @@
 <!DOCTYPE html>
-<html lang="ru" data-theme="light">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Товары - Портфолио</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style/styles.css" />
-    <title>Каталог товаров</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
   </head>
-  <body>
-    <div class="page-container">
-      <header class="header">
-        <h1 class="header__title">Каталог товаров</h1>
-        <button class="header__theme-toggle" aria-label="Переключить тему">
-          <span class="header__theme-icon">🌙</span>
-        </button>
+  <body class="bg-light">
+    <div class="container-fluid p-0">
+      <header class="bg-primary text-white py-4">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col">
+              <h1 class="h3 mb-1">Моё Портфолио</h1>
+              <p class="mb-0 opacity-75">Студент разработчик</p>
+            </div>
+            <div class="col-auto">
+              <span class="badge bg-light text-primary">ЭФБО-02-24</span>
+            </div>
+          </div>
+        </div>
       </header>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="../index.html" class="nav__link">Главная</a>
-          </li>
-          <li class="nav__item">
-            <a href="./news.html" class="nav__link">Новости</a>
-          </li>
-          <li class="nav__item">
-            <a href="./goods.html" class="nav__link nav__link--active"
-              >Товары</a
-            >
-          </li>
-          <li class="nav__item">
-            <a href="./contacts.html" class="nav__link">Контакты</a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Переключить навигацию"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">
+                  <i class="bi bi-house me-1"></i>Главная
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./news.html">
+                  <i class="bi bi-newspaper me-1"></i>Новости
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./goods.html">
+                  <i class="bi bi-cart me-1"></i>Товары
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacts.html">
+                  <i class="bi bi-telephone me-1"></i>Контакты
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
 
-      <main class="content">
-        <h2 class="section-title">Каталог товаров</h2>
+      <main class="container my-4">
+        <section class="mb-4">
+          <div class="d-flex align-items-center mb-3">
+            <i class="bi bi-cart me-2 fs-3 text-primary"></i>
+            <h2 class="h3 mb-0 text-primary">Каталог товаров</h2>
+          </div>
+        </section>
 
-        <section class="products-grid" aria-labelledby="products-title">
-          <h3 id="products-title" class="visually-hidden">Список товаров</h3>
+        <section class="mb-5">
+          <div class="card shadow-sm">
+            <div class="card-header bg-light">
+              <h3 class="card-title h5 mb-0">
+                <i class="bi bi-grid-3x3-gap text-primary"></i>
+                Товары
+              </h3>
+            </div>
+            <div class="card-body">
+              <div class="row g-4">
+                <div class="col-md-4">
+                  <div class="card h-100 shadow-sm border-primary">
+                    <img
+                      src="../images/product1.jpg"
+                      alt="Полка с товарами"
+                      class="card-img-top"
+                      style="height: 250px; object-fit: cover"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Полка с товарами</h5>
+                      <p class="card-text text-muted">
+                        Стильная полка для хранения различных товаров и
+                        аксессуаров
+                      </p>
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div>
+                          <span class="fs-5 fw-bold text-primary"
+                            >1000 руб.</span
+                          >
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-          <div class="container">
-            <div class="row justify-content-center">
-              <div
-                class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4"
-              >
-                <article class="product-card product-card--selected">
-                  <img
-                    src="../images/product1.jpg"
-                    alt="Полка с товарами"
-                    class="product-card__image"
-                  />
-                  <h4 class="product-card__title">Полка с товарами</h4>
-                  <p class="product-card__price">
-                    <span class="product-card__price--old">1500 руб.</span>
-                    1000 руб.
-                  </p>
-                </article>
-              </div>
+                <div class="col-md-4">
+                  <div class="card h-100 shadow-sm">
+                    <img
+                      src="../images/product2.jpg"
+                      alt="Дверь со старой ручкой"
+                      class="card-img-top"
+                      style="height: 250px; object-fit: cover"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Дверь со старой ручкой</h5>
+                      <p class="card-text text-muted">
+                        Аутентичная дверь с винтажной ручкой для интерьера в
+                        классическом стиле
+                      </p>
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <span class="fs-5 fw-bold text-primary">1500 руб.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-              <div
-                class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4"
-              >
-                <article class="product-card product-card--selected">
-                  <img
-                    src="../images/product2.jpg"
-                    alt="Дверь со старой ручкой"
-                    class="product-card__image"
-                  />
-                  <h4 class="product-card__title">Дверь со старой ручкой</h4>
-                  <p class="product-card__price">1500 руб.</p>
-                </article>
-              </div>
-
-              <div
-                class="col-12 col-md-6 col-lg-4 d-flex justify-content-center mb-4"
-              >
-                <article class="product-card product-card--selected">
-                  <img
-                    src="../images/product4.jpg"
-                    alt="Картина мироздания"
-                    class="product-card__image"
-                  />
-                  <h4 class="product-card__title">Картина мироздания</h4>
-                  <p class="product-card__price">2000 руб.</p>
-                </article>
+                <div class="col-md-4">
+                  <div class="card h-100 shadow-sm">
+                    <img
+                      src="../images/product4.jpg"
+                      alt="Картина мироздания"
+                      class="card-img-top"
+                      style="height: 250px; object-fit: cover"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Картина мироздания</h5>
+                      <p class="card-text text-muted">
+                        Художественная картина, изображающая гармонию вселенной
+                        и природных элементов
+                      </p>
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <span class="fs-5 fw-bold text-primary">2000 руб.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </section>
       </main>
 
-      <footer class="footer">
-        <p>&copy; 2025 Мой сайт. Все права защищены.</p>
+      <footer class="bg-dark text-white py-4 mt-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6">
+              <p class="mb-0">
+                &copy; 2025 Портфолио студента. Все права защищены.
+              </p>
+            </div>
+            <div class="col-md-6 text-md-end">
+              <a
+                href="./contacts.html"
+                class="text-white text-decoration-none me-3"
+                >Контакты</a
+              >
+              <a href="#" class="text-white text-decoration-none"
+                >Политика конфиденциальности</a
+              >
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../theme.js"></script>
-    <script src="../cards.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
