--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   </p>
                   <p class="card-text">
                     Факультет информационных технологий, специальность
-                    "Веб-разработка"
+                    "Фуллстек-разработка"
                   </p>
                   <div class="d-flex gap-2 flex-wrap">
                     <span class="badge bg-primary">HTML/CSS</span>
